fix bugs on ios (#8)
* fix bugs on ios

* improve css for mobile

* fix ios landscape

--- a/public/global.css
+++ b/public/global.css
@@ -4,10 +4,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        min-height: 100%;
-        padding: 20px;
-        padding-bottom: 100px;
-        padding-top: 100px;
         color: #ccc;
         text-align: center;
         background-image: radial-gradient(
@@ -15,7 +11,13 @@
             #262626 0%,
             #000000 175%
         );
+        min-width: 100vw;
 		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        -webkit-user-select:none;
+        -moz-user-select:none;
+        -webkit-touch-callout:none;
+        -ms-user-select:none;
+        user-select: none;
 	}
 
 	h2 {
